<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_not_netconnect_bfgray"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipsNetworkWrong"
        android:textColor="@color/colorBF"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipsCheckNetworkSetting"
        android:textColor="@color/colorBF"
        android:textStyle="bold"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/nnc_set_btn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/buttonGoSetting"
        android:background="@color/colorMainOne"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"/>

</LinearLayout>
