<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_dialog_bottom_upward"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="選擇記錄類型"
        tools:ignore="HardcodedText"
        android:textColor="@color/colorBlack98"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/dhsAllBtn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/buttonAll"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_button_rectangle_normal_activited_selector"
            android:gravity="center" />

        <TextView
            android:id="@+id/dhsCategoryBtn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/buttonCategory"
            android:textColor="@color/colorBlack95"
            android:background="@drawable/bg_button_rectangle_white_activited_selector"
            android:gravity="center"
            android:layout_marginStart="20dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/dhsSubjectBtn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/buttonSubject"
            android:textColor="@color/colorBlack95"
            android:background="@drawable/bg_button_rectangle_white_activited_selector"
            android:gravity="center" />

        <TextView
            android:id="@+id/dhsOtherBtn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/buttonOtherPurchased"
            android:textColor="@color/colorBlack95"
            android:background="@drawable/bg_button_rectangle_white_activited_selector"
            android:gravity="center"
            android:layout_marginStart="20dp"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorF0"/>

    <TextView
        android:id="@+id/dhsCancleBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/buttonNoThanks"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack95"
        android:textSize="16sp" />


</LinearLayout>