<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/fslLoadingLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible"
        android:background="@drawable/bg_rectangle_white_with_corner">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/colorTranslate"
            android:indeterminateTint="@color/colorMainTwo"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fslFailedLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipsGetDataFailed"
            android:textColor="@color/colorBlack95"/>

        <TextView
            android:id="@+id/fslRegetBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/buttonReget"
            android:textColor="@color/colorWhite"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_normal_activited_selector" />

    </LinearLayout>

    <TextView
        android:id="@+id/fslNodataTv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tipsNoPurchasedAnything"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fslRy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:visibility="gone"/>

</LinearLayout>