<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_logo_exmination"
            app:srcCompat="@drawable/ic_logo_exmination"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/flAppNameTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorMainOne"
            android:textSize="42sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/flAppIntroTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/productIntroductionOne"
            android:textAlignment="center"
            android:textColor="@color/color33"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_shadow_card_normal"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/flEmailImg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_email_bfgray"
                tools:ignore="ContentDescription" />


            <EditText
                android:id="@+id/flEmailEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/fieldEmail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColor="@color/colorMainTwo"
                android:textColorHint="@color/colorBF"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry"
                android:importantForAutofill="no" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorE0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/flPasswordImg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_password_bfgray"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/flPasswordEt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/fieldPassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textColor="@color/colorMainTwo"
                android:textColorHint="@color/colorBF"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry"
                android:importantForAutofill="no" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/flLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/bg_button_normal_mainone"
        android:text="@string/buttonLogin"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/flForgotPwdBtn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/buttonForgotPwd"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/colorMainOne"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_translate_activited_selector"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorBE"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipsOtherLoginWay"
            android:textSize="14sp"
            android:textColor="@color/colorBE"
            android:background="@color/colorWhite"
            android:layout_centerInParent="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone">

    </LinearLayout>

</LinearLayout>